SecurityConfigのリファクタリング